--- a/isocpp/inline_op_states.org
+++ b/isocpp/inline_op_states.org
@@ -1117,7 +1117,7 @@ namespace std::execution {
     <ins>template&lt;class Self, size_t Id, class CompletionTag, class... Datums&gt;
     constexpr void <expos>complete</expos>(this Self& self, <expos>indexed-tag</expos>&lt;Id&gt;,
         CompletionTag, Datums&&... datums) noexcept { //exposition only
-      return CompletionTag()(self.get_receiver(), std::forward<Datums>(datums)...);
+      CompletionTag()(self.get_receiver(), std::forward&lt;Datums&gt;(datums)...);
     }</ins>
   };
 
@@ -1455,10 +1455,219 @@ namespace std::execution {
 </div>
 #+end_export
 
+Strike paragraphs 34 through 38 from [exec.snd.expos]:
 
-NOTE: The rest of the wording changes necessary for having the standard library async algorithms
-implement the optimisation will need some significant refactoring to remove some assumptions
-about the receiver object lifetime and will be provided in a subsequent revision of this paper.
+#+BEGIN_EXPORT html
+<div class="wording">
+
+<del>The member default-impls ::get-attrs is initialized with a callable object equivalent to the following
+lambda:</del>
+<pre><del>[](const auto&, const auto&... child) noexcept -> decltype(auto) {
+  if constexpr (sizeof...(child) == 1)
+    return (FWD-ENV (get_env(child)), ...);
+  else
+    return env<>();
+}
+</del></pre>
+
+<del>The member default-impls ::get-env is initialized with a callable object equivalent to the following
+lambda:</del>
+<pre><del>[](auto, auto&, const auto& rcvr) noexcept -> decltype(auto) {
+  return FWD-ENV (get_env(rcvr));
+}</del></pre>
+
+<del>The member default-impls ::get-state is initialized with a callable object equivalent to the following
+lambda:</del>
+<pre><del>[]<class Sndr, class Rcvr>(Sndr&& sndr, Rcvr& rcvr) noexcept -> decltype(auto) {
+  auto& [_, data, ...child] = sndr;
+  return std::forward_like&lt;Sndr&gt;(data);
+}</del></pre>
+
+<del>The member default-impls ::start is initialized with a callable object equivalent to the following lambda:</del>
+<pre><del>[](auto&, auto&, auto&... ops) noexcept -> void {
+  (execution::start(ops), ...);
+}</del></pre>
+
+<del>The member default-impls ::complete is initialized with a callable object equivalent to the following
+lambda:</del>
+<pre><del>[]&lt;class Index, class Rcvr, class Tag, class... Args&gt;(
+  Index, auto& state, Rcvr& rcvr, Tag, Args&&... args) noexcept
+  -> void requires callable &lt;Tag, Rcvr, Args...&gt; {
+  static_assert(Index::value == 0);
+  Tag()(std::move(rcvr), std::forward&lt;Args&gt;(args)...);
+}</del></pre>
+
+</div>
+#+END_EXPORT
+
+** Changes to /~just~/, /~just_error~/, and /~just_stopped~/
+
+Modify [exec.just] p2.3 as follows:
+
+#+BEGIN_EXPORT html
+<div class="wording">
+<pre>template<>
+struct <expos><ins>state-</ins>impls-for</expos>&lt;<expos>decayed-typeof</expos>&lt;<expos>just-cpo</expos>&gt;&gt; : <expos>default-impls</expos> {
+  <del>static constexpr auto <expos>start</expos> =
+    [](auto& state, auto& rcvr) noexcept -> void {
+      auto& [...ts] = state;
+      <expos>set-cpo</expos>(std::move(rcvr), std::move(ts)...);
+    };</del>
+  <ins>template &lt;class Self&gt;
+  void <expos>start</expos>(this Self& self) {
+    auto& [...ts] = self.data;
+    <expos>set-cpo</expos>(std::move(self.get_receiver()), std::move(ts)...);
+  }</ins>
+};</pre>
+</div>
+#+END_EXPORT
+
+** Changes to /~read_env~/
+
+Modify [exec.read.env] p3 as follows:
+
+#+BEGIN_EXPORT html
+<div class="wording">
+<pre>template<>
+struct <expos><ins>state-</ins>impls-for</expos>&lt;<expos>decayed-typeof</expos>&lt;read_env&gt;&gt; : <expos>default-impls</expos> {
+  <del>static constexpr auto start =
+    [](auto query, auto& rcvr) noexcept -> void {
+      TRY-SET-VALUE (rcvr, query(get_env(rcvr)));
+    };</del>
+  <ins>template &lt;class Self&gt;
+  void <expos>start</expos>(this Self& self) {
+    TRY-SET-VALUE(self.get_receiver(), query(get_env(self.get_receiver())));
+  }</ins>
+};</pre>
+</div>
+#+END_EXPORT
+
+** Changes to /~schedule_from~/
+
+Forthcoming.
+
+** Changes to /~then~/, /~upon_error~/, /~upon_stopped~/
+
+Modify [exec.then] p4 as follows:
+
+#+BEGIN_EXPORT html
+<div class="wording">
+<pre>template<>
+struct <expos><ins>state-</ins>impls-for</expos>&lt;<expos>decayed-typeof</expos>&lt;<expos>then-cpo</expos>&gt;&gt; : <expos>default-impls</expos> {
+  <del>static constexpr auto <expos>complete</expos> =
+    []&lt;class Tag, class... Args&gt;
+      (auto, auto& fn, auto& rcvr, Tag, Args&&... args) noexcept -> void {
+      if constexpr (same_as&lt;Tag, <expos>decayed-typeof</expos>&lt;<expos>set-cpo</expos>&gt;&gt;) {
+        TRY-SET-VALUE (rcvr,
+          invoke(std::move(fn), std::forward&lt;Args&gt;(args)...));
+      } else {
+        Tag()(std::move(rcvr), std::forward&lt;Args&gt;(args)...);
+      }
+    };</del>
+  <ins>template&lt;class Self, size_t Id, class CompletionTag, class... Datums&gt;
+  constexpr void <expos>complete</expos>(this Self& self, <expos>indexed-tag</expos>&lt;Id&gt;,
+    CompletionTag, Datums&&... datums) noexcept { //exposition only
+      if constexpr (same_as&lt;CompletionTag, <expos>decayed-typeof</expos>&lt;<expos>set-cpo</expos>&gt;&gt;) {
+        TRY-SET-VALUE (self.get_receiver(),
+          invoke(self.data, std::forward&lt;Args&gt;(args)...));
+      } else {
+        CompletionTag()(self.get_receiver(), std::forward&lt;Args&gt;(args)...);
+      }
+  }</ins>
+};</pre>
+</div>
+#+END_EXPORT
+
+** Changes to /~let_value~/, /~let_error~/, /~let_stopped~/
+
+Forthcoming.
+
+** Changes to /~bulk~/
+
+Modify [exec.bulk] p3 as follows:
+
+#+BEGIN_EXPORT html
+<div class="wording">
+<pre>template<>
+struct <expos><ins>state-</ins>impls-for</expos>&lt;bulk_t&gt; : <expos>default-impls</expos> {
+  <del>static constexpr auto <expos>complete</expos> = see below;</del>
+  <ins>template&lt;class Self, size_t Id, class CompletionTag, class... Datums&gt;
+  constexpr void <expos>complete</expos>(this Self& self, <expos>indexed-tag</expos>&lt;Id&gt;,
+    CompletionTag, Datums&&... datums) noexcept requires see below;</ins>
+};</pre>
+</div>
+#+END_EXPORT
+
+Modify [exec.bulk] p4 as follows:
+
+#+BEGIN_EXPORT html
+<div class="wording">
+The member <expos><ins>state-</ins>impls-for</expos>&lt;bulk_t&gt;::<expos>complete</expos> is <del>initialized with a callable object</del> equivalent to the following
+<del>lambda</del>:
+
+<pre><del>[]&lt;class Index, class State, class Rcvr, class Tag, class... Args&gt;
+  (Index, State& state, Rcvr& rcvr, Tag, Args&&... args) noexcept -> void requires see below {
+  if constexpr (same_as&lt;Tag, set_value_t&gt;) {
+    auto& [shape, f] = state;
+    constexpr bool nothrow = noexcept(f(auto(shape), args...));
+    TRY-EVAL (rcvr, [&]() noexcept(nothrow) {
+      for (decltype(auto(shape)) i = 0; i &lt; shape; ++i) {
+        f(auto(i), args...);
+      }
+      Tag()(std::move(rcvr), std::forward<Args>(args)...);
+    }());
+  } else {
+    Tag()(std::move(rcvr), std::forward<Args>(args)...);
+  }
+}</del>
+<ins>if constexpr (same_as&lt;Tag, set_value_t&gt;) {
+  auto& [shape, f] = self.data;
+  constexpr bool nothrow = noexcept(f(auto(shape), args...));
+  TRY-EVAL (self.get_receiver(), [&]() noexcept(nothrow) {
+    for (decltype(auto(shape)) i = 0; i &lt; shape; ++i) {
+      f(auto(i), args...);
+    }
+    Tag()(self.get_receiver(), std::forward<Args>(args)...);
+  }());
+} else {
+  Tag()(self.get_receiver(), std::forward<Args>(args)...);
+}</ins></pre>
+</div>
+#+END_EXPORT
+
+** Changes to /~split~/
+
+Forthcoming
+
+** Changes to /~when_all~/
+
+Forthcoming.
+
+** Changes to /~into_variant~/
+
+Forthcoming.
+
+** TODO Changes to /~into_variant~/ :noexport:
+
+TODO: Change
+
+#+BEGIN_EXPORT html
+<div class="wording">
+<pre>template<>
+struct <ins>sender-</ins>impls-for&lt;into_variant_t&gt; : default-<ins>sender-</ins>impls {
+  <del>static constexpr auto get-state = see below ;
+  static constexpr auto complete = see below ;</del>
+  <ins>template&lt;class Self&gt;
+  default-state&lt;tag_of_t, decay_t&lt;data-type-t&lt;Self&gt;&gt;&gt;
+    get-state(this Self&& self) // exposition only
+      noexcept(is-nothrow-decay-copyable-v&lt;data-type-t&lt;Self&gt;&gt;);</ins>
+};</pre>
+</div>
+#+END_EXPORT
+
+** Changes to /~run_loop::run-loop-sender~/
+
+Forthcoming.
 
 * Proposed Wording :noexport:
 
